@@ -1,3 +1,6 @@
+timing_160816: Added quotes to timing event names in t_startf and t_stopf
+               before calling GPTL routines.
+               [Patrick Worley and Sean Patrick Santos]
 timing_160320: Added routines t_set_prefixf and t_unset_prefixf.
                Setting the prefix adds this to the beginning of all subsequent 
                timer event names (defined in t_startf/t_stopf).
